feat: update application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 // para visualizar o console do H2
 spring.h2.console.enabled=true
+
+// variavel servico validar transacao
+api.authorize.transaction.url=https://run.mocky.io/v3/8fafdd68-a090-496f-8c9a-3442cf30dae6
+
+// variavel servico notificacao transacao
+api.notification.transaction.url=http://o4d9z.mocklab.io/notify
